# OpenSpec-Jsonrpsee

./: Cargo.toml  TODO.md  parse.js
easy-rpc-macros/: Cargo.toml
easy-rpc-macros/src/: helpers.rs  lib.rs
easy-rpc-macros/src/rpc/: callback.rs  mod.rs  wrapper.rs
easy-rpc-macros/src/rpc_method/: client.rs  handler.rs  mod.rs  model.rs  request.rs  spec.rs
easy-rpc-macros/src/spec/: mod.rs
examples/fullstack/: Cargo.toml  package.json  pnpm-lock.yaml  spec.json
examples/fullstack/bindings/rust/src/: lib.rs
examples/fullstack/bindings/typescript/: package.json
examples/fullstack/bindings/typescript/src/: index.ts
examples/fullstack/client/typescript/: package.json
examples/fullstack/client/typescript/src/: index.ts  openrpc.json
examples/fullstack/src/: App.tsx
examples/fullstack/src-backend/: main.rs
examples/poc-ts/: package.json  spec.json  tsconfig.json
examples/poc-ts/src/: index.ts
examples/poc-ts/src-backend/: main.rs
openspec-jsonrpsee-macros/: Cargo.toml
openspec-jsonrpsee-macros/src/: lib.rs
openspec-jsonrpsee-macros/src/rpc_method/: client.rs  handler.rs  mod.rs  model.rs  request.rs  sanitize_input.rs  spec.rs
src/: lib.rs  rpc.rs  spec.rs  test.rs
src/rpc/: method.rs  mod.rs  module.rs
src/spec/: mod.rs  parameter.rs
tests/: client-generator.rs  ctx-database.rs  ctx.rs  experiment.rs  fn-arg-no-return.rs  fn-arg-option.rs  fn-arg-return.rs  fn-async.rs  fn-client-generator.rs  fn-no-arg-no-return.rs  module-ctx.rs  module-spec.rs  poc-jsonrpsee-simple.rs  spec.rs
