[package]
name = "easy-rpc"
version = "0.1.0"
edition = "2024"

[features]
default = []
test = ["dep:tokio"]

[dependencies]
easy-rpc-macros = { path = "./easy-rpc-macros" }
jsonrpsee = { version = "0.26", default-features = false }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = { version = "1.0.143", default-features = false }
tokio = { version = "1", features = ["full"], optional = true }
schemars = "1.0.4"
typed-builder = "0.21.2"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
easy-rpc = { path = ".", features = ["test"] }
jsonrpsee = { version = "0.26", features = ["server", "macros", "client"] }
