[package]
name = "openspec-jsonrpsee"
version = "0.1.0"
edition = "2024"

[features]
default = ["server"]
server = ["jsonrpsee/server", "schemars", "openspec-jsonrpsee-macros/server"]
client = ["jsonrpsee/client", "openspec-jsonrpsee-macros/client"]
test = ["dep:tokio"]

[dependencies]
openspec-jsonrpsee-macros = { path = "./openspec-jsonrpsee-macros", default-features = false }
jsonrpsee = { version = "0.26" }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = { version = "1.0.143", default-features = false }
tokio = { version = "1", features = ["full"], optional = true }
schemars = { version = "1.0.4", optional = true }
typed-builder = "0.21.2"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
openspec-jsonrpsee = { path = ".", features = ["server", "test", "client"] }
jsonrpsee = { version = "0.26", features = ["server", "macros", "client"] }
