[package]
name = "fullstack-example"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fullstack-example"
path = "src-backend/main.rs"

[dependencies]
jsonrpsee = { version = "0.26.0", features = ["server"] }
openspec-jsonrpsee = { path = "../../" }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["serde_derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.47.0", features = ["full"] }
